// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`combined read and force options are passed to vsts-npm-auth 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: yes)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`invalid expiration minutes are rejected: -1 1`] = `"error: option '-e, --expiration-minutes <minutes>' argument '-1' is invalid. Expiration minutes must be a positive integer."`;

exports[`invalid expiration minutes are rejected: 0 1`] = `"error: option '-e, --expiration-minutes <minutes>' argument '0' is invalid. Expiration minutes must be a positive integer."`;

exports[`invalid expiration minutes are rejected: 1.5 1`] = `"error: option '-e, --expiration-minutes <minutes>' argument '1.5' is invalid. Expiration minutes must be a positive integer."`;

exports[`invalid expiration minutes are rejected: 525601 1`] = `"error: option '-e, --expiration-minutes <minutes>' argument '525601' is invalid. Expiration minutes must be between 1 and 525600."`;

exports[`invalid expiration minutes are rejected: 9007199254740992 1`] = `"error: option '-e, --expiration-minutes <minutes>' argument '9007199254740992' is invalid. Expiration minutes must be between 1 and 525600."`;

exports[`invalid expiration minutes are rejected: Infinity 1`] = `"error: option '-e, --expiration-minutes <minutes>' argument 'Infinity' is invalid. Expiration minutes must be a positive integer."`;

exports[`invalid expiration minutes are rejected: abc 1`] = `"error: option '-e, --expiration-minutes <minutes>' argument 'abc' is invalid. Expiration minutes must be a positive integer."`;

exports[`target and expiration auth options (useOptionAlias: false) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the NPM configuration file at ./credentials/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the NPM configuration file at ./credentials/.npmrc
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`target and expiration auth options (useOptionAlias: true) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the NPM configuration file at ./credentials/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the NPM configuration file at ./credentials/.npmrc
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`token acquisition (force: false) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`token acquisition (force: true) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: yes)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`token scope (read: false) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`token scope (read: true) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;
